Fixed an issue where items in the option menu were invisible

--- a/window_main/src/css/root.css
+++ b/window_main/src/css/root.css
@@ -29,3 +29,7 @@ body {
   overflow: hidden;
   background-color: var(--root-color-1);
 }
+
+option {
+  color: #000;
+}
